# QRSXTJYY_Desktop-Power-Monitoring-System

./: .gitignore  CMakeLists.txt  README.md
app/inc/: app.h  app_adc.h  app_capture.h  app_command.h  app_config.h  app_dac.h  app_display.h  app_keys.h  app_monitor_state.h  app_protocol.h  app_protocol_defs.h  app_pwm.h  app_relay.h  app_screenshot.h  app_startup.h  app_ui.h
app/src/: app.c  app_adc.c  app_capture.c  app_command.c  app_dac.c  app_display.c  app_keys.c  app_monitor_state.c  app_protocol.c  app_pwm.c  app_relay.c  app_screenshot.c  app_startup.c  app_ui.c
bsp/inc/: board.h  delay.h  sys.h
bsp/src/: board.c  delay.c  syscalls.c
cmake/: starm-clang.cmake
core/inc/: stm32f10x_conf.h
core/src/: main.c  stm32f10x_it.c
docs/: IO-ALLO.md
linker/: STM32F103RCT6_FLASH.ld
middleware/alientek_lcd/: lcd.c  lcd.h
report/: .latexmkrc  main.tex
report/LaTex/: main.tex
report/PPT/: index.html
report/PPT/css/: style.css
report/PPT/js/: ascii.js  init.js  motion.js  nav.js
rust_algos/: Cargo.toml  cbindgen.toml
rust_algos/include/: rust_algos.h
rust_algos/src/: lib.rs
tools/openocd/: stm32f103rct6.cfg
tools/serial_cmd/: Cargo.toml
tools/serial_cmd/src/: main.rs  protocol.rs  transport.rs
